--- a/writing/cogsci2018/cogsci2018.tex
+++ b/writing/cogsci2018/cogsci2018.tex
@@ -526,19 +526,19 @@ We modeled action decisions using a logistic regression specified as
 No-Goal and No-Social condition as the reference category. We replicated
 the key finding from E1: participants tended to select the ``single''
 action more often when they were within a context that emphasized a
-learning goal (\(M_{learn} =\) 68\%, {[}57\%, 79\%{]}), followed by the
-No Goal context (\(M_{noGoal} =\) 52\%, {[}40\%, 63\%{]}), then
+learning goal (\(M_{learn} =\) 68\%, {[}57\%, 78\%{]}), followed by the
+No Goal context (\(M_{noGoal} =\) 52\%, {[}41\%, 63\%{]}), then
 Performance (\(M_{perform} =\) 37\%, {[}26\%, 48\%{]}), with the fewest
 single actions generated in the Presentation condtion (\(M_{present} =\)
 8\%, {[}2\%, 17\%{]}).
 
 There was a main efffect of social context, with participants being less
 likely to select the single action when their boss was present
-(\(\beta =\) -52.2\%, {[}-99.9\%, -4.8\%{]}). Finally, there was
-evidence for a reliable interaction between goal condition and social
-context such that the effect of social context was present in the
-Learning and No-Goal conditions, but not in the Performance condition
-(\(\beta\) \(_{int}\) = 1.127, {[}0.9\%, 225.3\%{]}).
+(\(\beta =\) -0.521, {[}-1.005, -0.053{]}). Finally, there was evidence
+for a reliable interaction between goal condition and social context
+such that the effect of social context was present in the Learning and
+No-Goal conditions, but not in the Performance condition (\(\beta\)
+\(_{int}\) = 1.163, {[}0.01, 2.312{]}).
 
 \subsubsection{Action decision times:}\label{action-decision-times-1}
 
@@ -567,25 +567,20 @@ and type of action choice.
 \subsubsection{BDA model-data fit:}\label{bda-model-data-fit}
 
 In this experiment, participants were instructed to choose an action
-based on a certain goal. We assume that the goal descriptions
-(e.g.~figure out the correct label for the toy; ``learning'') conveyed
-to the participants a particular set of goal weights \{\(\phi_{learn}\),
-\(\phi_{perf}\), \(\phi_{pres}\)\} that they used to generate their
-action choice. We put uninformative priors on these weights
-(\(\phi \sim Uniform(0,1)\)) and inferred their credible values
-separately for each pair of different goal condition and social context,
-using Bayesian data analytic techniques (Lee \& Wagenmakers, 2014).
+based on a certain
+goal\footnote{A separate prior elicitation task, in which people indicated the likelihood for selecting an action without any background information about possible hypotheses or goals, did not suggest that any of the action choice priors differed from chance; we used mean likelihood for each action choice as the baseline prior in our model; see [FIXME]}.
 
-The inferred goal weights were consistent with what we predicted
-\ldots{} {[}FIXME{]}
+We assume that the goal descriptions (e.g.~figure out the correct label
+for the toy; ``learning'') conveyed to the participants a particular set
+of goal weights \{\(\phi_{learn}\), \(\phi_{perf}\), \(\phi_{pres}\)\}
+that they used to generate their action choice. We put uninformative
+priors on these weights (\(\phi \sim Uniform(0,1)\)) and inferred their
+credible values separately for each pair of different goal condition and
+social context, using Bayesian data analytic techniques (Lee \&
+Wagenmakers, 2014).
 
-We also inferred another parameter of the cognitive model, the
-optimality parameter \(\lambda\). We put uninformative prior on the
-parameter (\(\lambda \sim Uniform(0,10)\) and inferred its posterior
-credible value from the data. We ran 4 MCMC chains for 100,000
-iterations, discarding the first 50,000 for burnin. The Maximum A-
-Posteriori (MAP) estimate and 95\% Highest Probability Density Interval
-(HDI) for \(\lambda\) was 5.76 {[}3.84, 7.14{]}.
+The inferred goal weights were consistent with what we predicted (see
+Figure FIXME).
 
 \section{General Discussion}\label{general-discussion}
 
